# CodecStepResponse

./: .gitignore  .travis.yml  README.md
etc/: codecs.cfg  rates.cfg  sequences.cfg
include/rtp++/: Version.h
include/rtp++/experimental/: INetworkCodecCooperation.h
include/rtp++/media/: MediaDescriptor.h  MediaStreamParser.h  NalUnitMediaSource.h
include/rtp++/media/h264/: H264AnnexBStreamWriter.h  H264FormatDescription.h  H264NalUnitTypes.h  SvcExtensionHeader.h
include/rtp++/media/h265/: H265AnnexBStreamWriter.h  H265FormatDescription.h
include/rtp++/util/: Buffer.h  Conversion.h  OBitStream.h
scripts/: generate_references.sh  run.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/EvalCodecStepResponse/: CMakeLists.txt  main.cpp  stdafx.h
src/lib/: CMakeLists.txt  stdafx.h
src/lib/media/: NalUnitMediaSource.cpp  YuvMediaSource.cpp
src/lib/util/: Base64.cpp
src/libs/: CMakeLists.txt
src/libs/OpenH264Codec/: CMakeLists.txt  OpenH264Codec.cpp  OpenH264Codec.h
src/libs/VppH264Codec/: VppH264Codec.cpp  VppH264Codec.h
src/libs/X264Codec/: CMakeLists.txt  X264Codec.cpp  X264Codec.h  stdafx.cpp
src/libs/X265Codec/: CMakeLists.txt  X265Codec.cpp  X265Codec.h  stdafx.h
src/test/UnitTests/: Media.h
src/tools/: CMakeLists.txt
src/tools/GeneratePSNR/: CMakeLists.txt  main.cpp
src/tools/NaluInfo/: CMakeLists.txt  main.cpp
templates/: EvalCodecStepResponse.template  plot.R.template  vc_param.template
