#IF(BUILD_OPEN_H264)
ADD_SUBDIRECTORY( OpenH264Codec )
#ENDIF(BUILD_OPEN_H264)
#IF(BUILD_VPP_H264)
ADD_SUBDIRECTORY( VppH264Codec )
#ENDIF(BUILD_VPP_H264)
# not building x264 on windows for now
IF (NOT WIN32)
#IF(BUILD_X264)
ADD_SUBDIRECTORY( X264Codec )
#ENDIF(BUILD_X264)
ENDIF(NOT WIN32)
IF(BUILD_X265)
ADD_SUBDIRECTORY( X265Codec )
ENDIF(BUILD_X265)

